# MLOps

./: .gitignore  pyproject.toml
charts/ray/: values.yaml
flytewf/mnist_wf/: README.md  main.py  pyproject.toml
flytewf/pf/: README.md  common.py  dataset.py  model.py  peopleface.py  pyproject.toml  serve.py
flytewf/pf/lightning_logs/version_0/: metrics.csv
flytewf/pf/lightning_logs/version_0/checkpoints/: epoch=9-step=50.ckpt
flytewf/pf/lightning_logs/version_1/: metrics.csv
flytewf/pf/lightning_logs/version_1/checkpoints/: epoch=9-step=50.ckpt
flytewf/pf/lightning_logs/version_2/: metrics.csv
flytewf/pf/lightning_logs/version_2/checkpoints/: epoch=9-step=50.ckpt
flytewf/pf/lightning_logs/version_3/: metrics.csv
flytewf/pf/lightning_logs/version_3/checkpoints/: epoch=9-step=50.ckpt
flytewf/pf/lightning_logs/version_4/: metrics.csv
flytewf/pf/lightning_logs/version_4/checkpoints/: epoch=9-step=50.ckpt
flytewf/pf/lightning_logs/version_5/: metrics.csv
flytewf/pf/lightning_logs/version_5/checkpoints/: epoch=9-step=50.ckpt
flytewf/pf/lightning_logs/version_6/: metrics.csv
flytewf/pf/lightning_logs/version_6/checkpoints/: epoch=9-step=50.ckpt
flytewf/pf/utils/: model.py
lightning_train/: Module.py  dataloader.py  main.py  model.py
pipeline/: doc.md  kubeflow_pipeline.py
pipeline/gitlab/: gitlab-ci.yaml  gitlab.yaml  gitlab_runner.yaml
pipeline/kuberay/: value.yaml
pipeline/mlflow/: Dockerfile  (+1 more)
pipline/: kubeflow_pipline.py
ray/: Dockerfile  demo.py  pyproject.toml
train/: dataloader.py  main.py  model.py  resize.py  test.py
